Remove MyCard feature and implement automatic event cleanup
- Remove MyCard menu item, component, and routes
- Remove View.MY_CARD enum and related imports
- Implement automatic cleanup of past events from database
- Add cleanup for attendance records of past events
- Events past their date are automatically deleted on API calls
- Dashboard and attendance features only show current/future events

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.28.0",
+    "@types/html2canvas": "^0.5.35",
+    "html2canvas": "^1.4.1",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "^1.28.0"
+    "react-qr-code": "^2.0.18"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/qrcode.react": "^1.0.5",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
