--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.28.0",
     "@types/html2canvas": "^0.5.35",
+    "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
